--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
             app. The integrated testing features allow for a streamlined.
           </p>
 
-          <div class="grid md:grid-cols-3 gap-6">
+          <div id="latest-post-container" class="grid md:grid-cols-3 gap-6">
             <!-- Post 1 -->
-            <div
+            <!-- <div
               class="bg-white p-6 rounded-lg shadow-md border border-gray-200"
             >
               <div class="text-sm text-gray-500 mb-2">29 January 2024</div>
@@ -293,10 +293,10 @@
                   <p class="text-xs text-gray-400">Unknown</p>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Post 2 -->
-            <div
+            <!-- <div
               class="bg-white p-6 rounded-lg shadow-md border border-gray-200"
             >
               <div class="text-sm text-gray-500 mb-2">No publish date</div>
@@ -318,10 +318,10 @@
                   <p class="text-xs text-gray-400">Unknown</p>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <!-- Post 3 -->
-            <div
+            <!-- <div
               class="bg-white p-6 rounded-lg shadow-md border border-gray-200"
             >
               <div class="text-sm text-gray-500 mb-2">29 January 2024</div>
@@ -343,7 +343,7 @@
                   <p class="text-xs text-gray-400">ROR Developer</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
